--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet.csproj
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <Version>22.1.1</Version>
-    <AssemblyVersion>22.1.1</AssemblyVersion>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <Version>24.1.0</Version>
+    <AssemblyVersion>24.1.0</AssemblyVersion>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Resources\Logo.ico</ApplicationIcon>
@@ -20,8 +20,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="QRCoder" Version="1.4.3" />
-    <PackageReference Include="Slascone.Client" Version="2.1.363" />
+    <PackageReference Include="QRCoder" Version="1.5.1" />
+    <PackageReference Include="Slascone.Client" Version="2.1.364-beta" />
     <PackageReference Include="System.Security.Cryptography.Pkcs" Version="8.0.0" />
   </ItemGroup>
 
