--- a/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet.csproj
+++ b/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet/Slascone.Provisioning.Wpf.Sample.NuGet.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <Version>25.2.2</Version>
-    <AssemblyVersion>25.2.2</AssemblyVersion>
+    <Version>25.3.0</Version>
+    <AssemblyVersion>25.3.0</AssemblyVersion>
     <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
@@ -16,20 +16,21 @@
     <None Remove="Resources\circle.png" />
     <None Remove="Resources\DB-SL-Logo-forcircles256px.png" />
     <None Remove="Resources\exclamation.png" />
+    <None Remove="Resources\Information.png" />
     <None Remove="Resources\nouser.png" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.6" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.72.1" />
     <PackageReference Include="Microsoft.Identity.Client.Desktop" Version="4.72.1" />
-    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.11.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.12.0" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
-    <PackageReference Include="Slascone.Client" Version="2.1.838" />
-    <PackageReference Include="System.Security.Cryptography.Pkcs" Version="9.0.5" />
+    <PackageReference Include="Slascone.Client" Version="2.1.847" />
+    <PackageReference Include="System.Security.Cryptography.Pkcs" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,6 +39,7 @@
     <Resource Include="Resources\circle.png" />
     <Resource Include="Resources\DB-SL-Logo-forcircles256px.png" />
 	<Resource Include="Resources\exclamation.png" />
+	<Resource Include="Resources\information.png" />
 	<Resource Include="Resources\nouser.png" />
   </ItemGroup>
 
